--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,5 @@
 apply plugin: 'com.android.application'
-
+apply plugin: 'com.google.gms.google-services'
 android {
     compileSdkVersion 21
     buildToolsVersion '23.0.2'
@@ -26,4 +26,5 @@ dependencies {
     compile 'com.android.support:support-v13:21.0.2'
     compile 'com.android.support:appcompat-v7:21.0.2'
     compile 'io.socket:socket.io-client:0.6.2'
+    compile "com.google.android.gms:play-services-gcm:7.5.0"
 }
